# uwb-playground

./: .gitignore  Cargo.toml  README.md  flasher.conf  memory.x  reset.jlink
.cargo/: config
examples/: blink.rs  blink_rtic.rs  dumb_txrx.rs
src/: board.rs  channels.rs  codec.rs  color.rs  config.rs  crc_framer.rs  dump_delay.rs  main.rs  main_old.rs  panic_handler.rs  radio_message.rs  rplidar.rs  units.rs  util.rs  vl53L1x_multi.rs
src/motion/: mod.rs  serdes_impl.rs
src/newconfig/: bl.rs  br.rs  mod.rs  tr.rs
src/radio/: channelization.rs  message.rs  mod.rs  scheduler.rs  serdes.rs  serdes_impl.rs  state_machine.rs  types.rs
src/tasks/: blinker.rs  canbus.rs  channel_event.rs  ctrl_link.rs  dma.rs  idle.rs  init.rs  lift.rs  mod.rs  motion.rs  radio.rs  usart.rs
