[package]
name = "uwb"
version = "0.3.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2"
#nb = "0.1.2"
#cortex-m = "0.6"
cortex-m-rt = "0.6"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }

[dependencies.stm32g4xx-hal]
path = "../stm32g4xx-hal"
version = "0.0.0"
default-features = false
features = ["rt", "stm32g474"]

[features]
default = []
gcharger-board = []

[[bin]]
name = "uwb"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
#opt-level = "s"
opt-level = 3
codegen-units = 1
debug = true
lto = true