[package]
name = "uwb"
version = "0.3.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "0.1.2"
cortex-m = "0.6"
cortex-m-rt = "0.6"
#panic-halt = "0.2"
#dw1000 = "0.4.0"
dw1000 = { path = "../rust-dw1000/dw1000", version = "0.4.0" }
embedded-timeout-macros = "0.2.0"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
#rtt-target = { path = "../rtt-target/rtt-target", version = "0.2.0", features = ["cortex-m"] }
cortex-m-rtic = "0.5.3"
heapless = "0.5.5"
cfg-if = "0.1.10"
generic-array = "0.13.2"
crc16 = "0.4.0"
bbqueue = "0.4.8"
typenum = "1.12.0"
bincrc_codec = { path = "../bincrc_codec", default-features = false }

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f401"]
optional = true

[dependencies.stm32l4xx-hal]
version = "0.5.0"
features = ["rt", "stm32l4x6"]
optional = true

[dependencies.serde]
version = "1.0.105"
default-features = false
features = ["derive"]

[dependencies.ssmarshal]
version = "1.0"
default-features = false

[features]
default = []
master = []
slave = []
tr = []
bl = []
br = []
relay = []
devnode = []
pozyx-board = ["stm32f4xx-hal"]
dragonfly-board = ["stm32l4xx-hal"]

[[bin]]
name = "uwb"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
#opt-level = "s"
opt-level = 3
codegen-units = 1
debug = true
lto = true