[package]
name = "uwb"
version = "0.3.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2"
nb = "1.0.0"
cortex-m = "0.6"
cortex-m-rt = "0.6"
#panic-halt = "0.2"
#dw1000 = "0.4.0"
dw1000 = { path = "../rust-dw1000/dw1000", version = "0.4.0" }
embedded-timeout-macros = "0.2.0"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
#rtt-target = { path = "../rtt-target/rtt-target", version = "0.2.0", features = ["cortex-m"] }
cortex-m-rtic = "0.5.5"
heapless = "0.5.5"
cfg-if = "0.1.10"
generic-array = "0.13.2"
crc16 = "0.4.0"
bbqueue = "0.4.8"
typenum = "1.12.0"
bincrc_codec = { git = "https://github.com/romixlab/bincrc_codec", default-features = false }
no-std-compat = "0.4.1"
btoi = { version = "0.4.2", default-features = false }
vhrdcan = { path = "../vhrdcan" }

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f401"]
optional = true

[dependencies.stm32l4xx-hal]
version = "0.5.0"
features = ["rt", "stm32l4x6"]
optional = true

[dependencies.serde]
version = "1.0.105"
default-features = false
features = ["derive"]

[dependencies.stm32g4xx-hal]
path = "../stm32g4xx-hal"
version = "0.0.0"
default-features = false
features = ["rt", "stm32g474"]
optional = true

[features]
default = []
master = []
slave = []
anchor = []
tr = []
bl = []
br = []
relay = []
devnode = []
gcharger-board = ["stm32g4xx-hal"]
gcarrier-board = ["stm32g4xx-hal"]
pozyx-board = ["stm32f4xx-hal"]
dragonfly-board = ["stm32l4xx-hal"]
uwb-a = []
uwb-b = []
event-rtt-trace = []

[[bin]]
name = "uwb"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"
#opt-level = 3
codegen-units = 1
debug = true
lto = true